some visual enhancement (WIP)

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,5 +1,5 @@
-$base-background-color: #ff9900;
-$base-background-opacity-color: #e68a00;
+$base-background-color: #B46420; // #D2691E; // #ff9900;
+$base-background-opacity-color: #ffffff; // #e68a00;
 
 $logout-background-color: #990000;
 $logout-background-opacity-color: #800000;
