some minor color tweaking and refactoring

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,5 +1,7 @@
-$base-background-color: #B46420; // #D2691E; // #ff9900;
-$base-background-opacity-color: #ffffff; // #e68a00;
+$base-color: #B96925; // #D2691E; // #ff9900;
+$base-color-mod: #e68a00;
 
-$logout-background-color: #990000;
-$logout-background-opacity-color: #800000;
+$secondary-color: #901010;
+$secondary-color-mod: #A91010;
+
+$accent-color: #008B8B;
