changed base colors

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,5 +1,5 @@
-$base-color: #B96925; // #D2691E; // #ff9900;
-$base-color-mod: #e68a00;
+$base-color: #D98945; // #D2691E; // #ff9900;
+$base-color-mod: #F4A460;
 
 $secondary-color: #901010;
 $secondary-color-mod: #A91010;
