--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,7 +1,12 @@
-$base-color: #D98945; // #D2691E; // #ff9900;
-$base-color-mod: #F4A460;
+$base-color: #14a76c // #379683 // #2d7c2a
+$base-color-mod: #3aa336
+$base-color-mod2: #4dc447
 
-$secondary-color: #901010;
-$secondary-color-mod: #A91010;
+$accent-color: #ff652f
+$accent-color-mod: #ff652f
 
-$accent-color: #008B8B;
+$dark-color: #393939
+$dark-color-mod: #202020
+
+$light-color: #ffffff
+$light-color-mod: #f2f2f2
