--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -10,3 +10,7 @@ $dark-color-mod: #202020
 
 $light-color: #ffffff
 $light-color-mod: #f2f2f2
+
+$shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24)
+
+$radius: 4px
