working on explore css

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,15 +1,13 @@
-$base-color: #14a76c // #379683 // #2d7c2a
-$base-color-mod: #3aa336
-$base-color-mod2: #4dc447
-
-$accent-color: #ff652f
-$accent-color-mod: #ff652f
+$primary-color: #14a76c // #379683 // #2d7c2a
+$secondary-color: #ff652f
+$tertiary-color: #ffe400
 
 $dark-color: #393939
 $dark-color-mod: #202020
 
 $light-color: #ffffff
 $light-color-mod: #f2f2f2
+$light-color-mod-two: #e0e0e0
 
 $shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24)
 
