fixed css in some points

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -12,3 +12,7 @@ $light-color-mod-two: #e0e0e0
 $shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24)
 
 $radius: 4px
+
+$media-width-first: 768px
+
+$media-width-second: 320px
