--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -13,6 +13,8 @@ $shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24)
 
 $radius: 4px
 
-$media-width-first: 768px
+$media-width-first: 991px  // Large tablet styles
 
-$media-width-second: 320px
+$media-width-second: 767px  // Medium tablet styles
+
+$media-width-third: 479px  // Phones styles
