minor comment about media screens

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,4 +1,4 @@
-$primary-color: #14a76c // #379683 // #2d7c2a
+$primary-color: #14a76c
 $secondary-color: #ff652f
 $tertiary-color: #ffe400
 
@@ -13,8 +13,9 @@ $shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24)
 
 $radius: 4px
 
+// https://mediag.com/news/popular-screen-resolutions-designing-for-all/
 $media-width-first: 991px  // Large tablet styles
-
 $media-width-second: 767px  // Medium tablet styles
-
 $media-width-third: 479px  // Phones styles
+
+primary-font: "sfsdfg"
