setup fonts variable

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -18,4 +18,6 @@ $media-width-first: 991px  // Large tablet styles
 $media-width-second: 767px  // Medium tablet styles
 $media-width-third: 479px  // Phones styles
 
-primary-font: "sfsdfg"
+$initial-font: 'Avenir', Helvetica, Arial, sans-serif
+$primary-font: 'Alegreya', serif
+$secondary-font: 'Lato', sans-serif
