--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -13,13 +13,14 @@ $shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24)
 
 $radius: 4px
 
-$navbar-height: 70px
-
 // https://mediag.com/news/popular-screen-resolutions-designing-for-all/
 $media-width-first: 991px  // Large tablet styles
 $media-width-second: 767px  // Medium tablet styles
 $media-width-third: 479px  // Phones styles
 
+$margin-for-navbar: 34px
+$navbar-font-size: 110%
+
 $initial-font: 'Avenir', Helvetica, Arial, sans-serif
-$primary-font: 'Alegreya', serif//'Baloo Tammudu', cursive; //'Alegreya', serif
-$secondary-font: 'Lato', sans-serif
+$primary-font: 'Jua', sans-serif // 'Jua' 'Oxygen'
+$secondary-font: 'Nanum Gothic', sans-serif // 'Nanum Gothic'
