grayed out button and indicator in write while not logged in

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -7,7 +7,7 @@ $dark-color-mod: #202020
 
 $light-color: #ffffff
 $light-color-mod: #f2f2f2
-$light-color-mod-two: #e0e0e0
+$light-color-mod-two: #d2d2d2
 
 $shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24)
 
