minor color changes

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,6 +1,6 @@
 $primary-color: #14a76c
 $secondary-color: #ff652f
-$tertiary-color: #ffe400
+$tertiary-color: #ffff94 // #ffe400
 
 $dark-color: #393939
 $dark-color-mod: #202020
