--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,5 +1,6 @@
 $primary-color: #14a76c
 $secondary-color: #ff652f
+$secondary-color-mod: #ff0000
 $tertiary-color: #ffff94 // #ffe400
 
 $dark-color: #393939
