--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -1,7 +1,7 @@
 $primary-color: #14a76c
 $secondary-color: #ff652f
 $secondary-color-mod: #ff0000
-$tertiary-color: #ffff94 // #ffe400
+$tertiary-color: #ffffba // #ffe400
 
 $dark-color: #393939
 $dark-color-mod: #202020
